categorydisplayer no longer over-wraps

--- a/Assessments.Frontend.Web/wwwroot/css/categorybar.css
+++ b/Assessments.Frontend.Web/wwwroot/css/categorybar.css
@@ -21,8 +21,20 @@
 
 /* CATEGORY BAR */
 
-.category_displayer{
-    font-size:0;
+.category_displayer {
+    font-size: 0;
+    max-width: 585px;
+    position: relative;
+}
+
+.category_displayer::before{
+    content: "";
+    background: grey;
+    position: absolute;
+    top: calc(50% - 10px);
+    right: 0;
+    height: 5px;
+    width: 100%;
 }
 
 .category_displayer li {
@@ -41,13 +53,14 @@
 .category_displayer .category_item {
     height: 65px;
     width: 65px;
-    padding:5px;
-    padding-top:2px;
+    padding: 5px;
+    padding-top: 2px;
     border-radius: 2px;
-    border: 5px solid white;
+    border: 5px solid transparent;
     text-align: center;
     font-size: 22px;
     vertical-align: middle;
+    background-clip: padding-box;
 }
 
 .category_displayer .category_item span {
@@ -124,49 +137,72 @@
     }
 }
 
-@media only screen and (max-width: 650px) {
-    .category_displayer{
-        padding-bottom:50px;
-    }
-
-    .category_displayer li {
-        position: relative;
-        display: block;
-        height: 50px;
-        max-width: 100%;
-        margin: 0px;
-        padding:0px;
-        padding-left: 10px;
-        border-left: 4px solid transparent;
-    }
-
+@media only screen and (min-width: 940px) and (max-width: 1015px) {
+    /* Tiny jump where sidebar makes page smaller */
     .category_displayer .category_item {
-        width: 50px;
-        height: 50px;
+        width: 59px;
+        border-width: 3px;
     }
 
-    .category_displayer .category_item span {
-        position: absolute;
-        left: 70px;
-        color: black;
-        font-size: 12pt;
-        text-align: left;
-        top: 50%;
-    }
-
-    .topbar_label {
-        display:none;
-    }
-
-    .bottombar_label {
-        display:none;
-    }
-
-    .category_displayer .category_rl {
-        border-left: 4px solid red;
-    }
-
-    .category_displayer .category_threatened {
-        border-left: 4px solid black;
+    .category_displayer {
+        width: 533px;
     }
 }
+
+    @media only screen and (max-width: 650px) {
+        .category_displayer::before {
+            content: "";
+            background: grey;
+            position: absolute;
+            top: 0;
+            left: 40px;
+            height: 100%;
+            width: 5px;
+        }
+
+        .category_displayer {
+            margin-bottom: 10px;
+        }
+
+            .category_displayer li {
+                position: relative;
+                display: block;
+                height: 50px;
+                max-width: 100%;
+                margin: 0px;
+                padding: 0px;
+                padding-left: 10px;
+                border-left: 4px solid transparent;
+            }
+
+            .category_displayer .category_item {
+                width: 50px;
+                height: 50px;
+            }
+
+                .category_displayer .category_item span {
+                    position: absolute;
+                    left: 70px;
+                    color: black;
+                    font-size: 12pt;
+                    text-align: left;
+                    top: 50%;
+                }
+
+        .topbar_label {
+            display: none;
+        }
+
+        .bottombar_label {
+            display: none;
+        }
+
+        .category_displayer .category_rl {
+            border-left: 4px solid red;
+        }
+
+        .category_displayer .category_threatened {
+            border-left: 4px solid black;
+        }
+    }
+
